# fastapi-ml-courseWork

./: README.md  group.py  preprocessing_spacy.py  pyproject.toml  requirements.txt  results.txt  run.sh  spacy_results.txt  train_doc2vec.py  train_model.py
app/: PYTHONstudy.postman_collection.json  dz7_results  main.py  predict.py
app/models/: predict.py
