[tool.poetry]
name = "fastapi-ml-template"
version = "0.1.0"
description = ""
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"  # Оновлено
fastapi = "^0.98.0"  # Оновлено
pydantic = "^1.10.8"  # Оновлено
requests = "^2.31.0"  # Оновлено

[tool.poetry.dev-dependencies]
ipython = "^8.15.0"  # Оновлено
ipdb = "^0.13.13"  # Оновлено
flake8 = "^6.1.0"  # Оновлено
black = "^23.3.0"  # Оновлено
isort = "^5.12.0"  # Оновлено
pytest = "^7.3.2"  # Оновлено
tox = "^4.5.2"  # Оновлено

[tool.black]
line-length = 120
target-version = ['py39']  # Оновлено до відповідної версії Python
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["app", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
