[tool.poetry]
name = "fastapi-ml-template"
version = "0.1.0"
description = ""
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>", "Oksana Sydoruk <sydoruk.ok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
requests = "^2.31.0"
scikit-learn = "^1.0.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
ipython = "^8.15.0"
ipdb = "^0.13.13"
flake8 = "^6.1.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
tox = "^4.5.2"
httpx = "^0.24.0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["app", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
